fix siz in spacing box card

--- a/style.css
+++ b/style.css
@@ -25,3 +25,16 @@ body {
   border-radius: 50%;
   border: 5px solid #fff;
 }
+.box-card {
+  border-radius: 9px;
+  z-index: 10;
+  color: #fff;
+  background-image: url(img/background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 500px;
+  width: 50%;
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
+}
